Change navigation and icons t4

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@
   link: /t4-rez-de-jardin/
   new_window: false
   highlight: false
-- name: Loisirs à volonté
+- name: Loisirs
   link: /loisirs/
   new_window: false
   highlight: false
