--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: La Grande Bastide - Le Lavandou
-url: "https://location-au-lavandou.com/"
+url: "https://location-au-lavandou.com"
 baseurl:
 google_maps_javascript_api_key: AIzaSyC1y2cdTMHyZaWauL4qSen4vierk1hzukQ
 
